--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,8 @@ p {
 
 .container {
   /* max-width: 1158px; */
-  width: 100%;
-  padding: 0px 15px;
+
+  padding: 0px 16px;
   margin: 0 auto;
 }
 
@@ -217,7 +217,7 @@ img {
 /* hero */
 
 .hero {
-  /* padding: 188px 0;
+  padding: 188px 0;
   text-align: center;
   background: var(--second-bcg-color);
 
@@ -231,7 +231,7 @@ img {
   background-size: cover;
   max-width: 1440px;
   height: 600px;
-  margin: auto; */
+  margin: auto;
 }
 
 .hero-title {
@@ -269,18 +269,24 @@ img {
 
 /* Portfolio */
 
+.portfolio {
+  padding: 48px 0;
+}
+
+.list-btn {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px 24px;
+  margin-bottom: 48px;
+}
+
 .btn {
   display: inline-block;
 }
 
-.list-btn .btn + .btn {
+/* .list-btn .btn + .btn {
   margin-left: 24px;
-}
-
-.list-btn {
-  margin-bottom: 72px;
-  text-align: center;
-}
+} */
 
 .btn-items {
   padding: 12px 24px;
@@ -311,19 +317,15 @@ img {
   color: var(--second-btn-text-color);
 }
 
-.portfolio {
-  padding: 96px 0 120px 0;
-}
-
 .image-list {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 48px;
-  column-gap: 24px;
+  gap: 48px;
 }
 
 .image-item {
-  width: calc((100% - 48px) / 3);
+  width: 100%;
+
   padding: 0;
   border: 0.5px solid #f4f4fd;
 }
@@ -544,13 +546,15 @@ img {
 
 /* footer */
 .footer {
-  padding: 100px 0;
+  padding: 96px 0;
   background: var(--second-bcg-color);
 }
 
 .footer-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 72px;
 }
 
 .footer-logo {
@@ -581,7 +585,6 @@ img {
 
 /* footer-social */
 .footer-link {
-  margin-left: 120px;
   max-width: 208px;
 }
 
@@ -623,9 +626,7 @@ img {
 }
 
 /* footer-form */
-.footer-form {
-  margin-left: 80px;
-}
+
 .form {
   position: relative;
   display: flex;
