--- a/css/tablet.css
+++ b/css/tablet.css
@@ -3,6 +3,35 @@
     max-width: 768px;
   }
 
+  .hero {
+    padding-bottom: 108px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/people-office.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero/hero-desk2x.jpg);
+    }
+  }
+
+  .hero-title {
+    width: 496px;
+    margin: 0 auto 40px;
+
+    font-size: 56px;
+    line-height: 1.07;
+  }
+
   .portfolio {
     padding: 64px 0 96px 0;
   }
