--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   margin: auto;
 }
@@ -311,8 +311,7 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
-  align-items: center;
+
   text-align: center;
   letter-spacing: 0.04em;
   color: var(--main-btn-text-color);
@@ -335,13 +334,12 @@ img {
 
 .image-list {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 48px;
 }
 
 .image-item {
-  width: 100%;
-
   padding: 0;
   border: 0.5px solid #f4f4fd;
 }
@@ -465,10 +463,6 @@ img {
   background: var(--third-bcg-color);
 }
 
-.container-small {
-  padding: 0 82px;
-}
-
 .team-list {
   display: flex;
   flex-wrap: wrap;
@@ -477,7 +471,7 @@ img {
 }
 
 .card-content {
-  padding: 32px 0;
+  padding: 32px 10px;
 }
 
 .team-text {
@@ -516,7 +510,8 @@ img {
   fill: aqua;
 } */
 .team-list-item {
-  display: inline-block;
+  /* display: inline-block; */
+  display: block;
   text-align: center;
 
   background: var(--main-bcg-color);
@@ -533,7 +528,8 @@ img {
 .logo-list {
   display: flex;
   flex-wrap: wrap;
-  /* width: ((100% - 16px)/2); */
+  justify-content: center;
+  /* width: ((100% - 16px) / 2); */
   gap: 72px 16px;
 }
 
@@ -582,6 +578,7 @@ img {
   font-size: 18px;
   line-height: 1.17;
   display: block;
+  text-align: center;
 
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -609,6 +606,7 @@ img {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.5;
+  text-align: center;
 
   color: var(--second-title-color);
 }
@@ -644,29 +642,37 @@ img {
 
 /* footer-form */
 
+.footer-container > .footer-form {
+  width: 100%;
+}
+
 .form {
-  position: relative;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 455px;
+  width: 100%;
 }
 
 .footer-mail {
   padding: 8px 16px;
-  width: 265px;
-  height: 40px;
+  width: 100%;
 
+  height: 40px;
+  margin-bottom: 16px;
   color: var(--second-btn-text-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: var(--second-bcg-color);
   border-radius: 4px;
 }
-
+.footer-btn {
+  position: relative;
+}
 .btn-subscribe {
   display: flex;
   width: 165px;
   height: 40px;
-  margin-left: 24px;
+
   padding: 8px 24px;
 
   font-family: inherit;
