--- a/css/tablet.css
+++ b/css/tablet.css
@@ -24,6 +24,90 @@
     }
   }
 
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .header-navigation {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-list,
+  .contact-list {
+    display: flex;
+  }
+
+  .header-list .link,
+  .contact-list .link {
+    display: block;
+    padding: 24px 0;
+  }
+
+  .header-links:not(:last-child),
+  .contact-item:not(:last-child) {
+    margin-right: 40px;
+  }
+
+  .header-link {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--main-link-text-color);
+
+    transition: color 250ms var(--tm-function);
+  }
+
+  .header-link:hover,
+  .header-link:focus {
+    color: var(--accent-color);
+  }
+
+  .current {
+    position: relative;
+    color: var(--accent-color);
+  }
+
+  .current::after {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 4px;
+
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+
+  .link-address {
+    font-style: normal;
+  }
+
+  .contact-list {
+    margin-left: auto;
+  }
+
+  .contact-item {
+    display: block;
+  }
+
+  .contact-link,
+  .contact-tel {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
+    transition: color 250ms var(--tm-function);
+  }
+
+  .contact-link:hover,
+  .contact-link:focus {
+    color: var(--accent-color);
+  }
+
   .hero-title {
     width: 496px;
     margin: 0 auto 40px;
@@ -84,6 +168,8 @@
   }
 
   .footer-container {
+    padding-left: 108px;
+    justify-content: start;
     gap: 72px 24px;
   }
 
