--- a/css/tablet.css
+++ b/css/tablet.css
@@ -23,31 +23,30 @@
         url(../images/hero/hero-desk2x.jpg);
     }
   }
+  .menu-btn-open {
+    display: none;
+  }
 
-  .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  .mob-menu {
+    display: none;
   }
 
   .header-navigation {
     display: flex;
     align-items: center;
+    padding: 0;
   }
 
-  .header-list,
-  .contact-list {
+  .header-list {
     display: flex;
   }
 
-  .header-list .link,
-  .contact-list .link {
+  .header-list .link {
     display: block;
     padding: 24px 0;
   }
 
-  .header-links:not(:last-child),
-  .contact-item:not(:last-child) {
+  .header-links:not(:last-child) {
     margin-right: 40px;
   }
 
@@ -88,11 +87,9 @@
   }
 
   .contact-list {
-    margin-left: auto;
-  }
-
-  .contact-item {
     display: block;
+
+    margin-left: auto;
   }
 
   .contact-link,
@@ -201,6 +198,12 @@
     margin-left: 16px;
     transform: translateY(-50%);
     fill: var(--main-bcg-color);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact-item:not(:last-child) {
+    margin-bottom: 4px;
   }
 }
 
