--- a/css/desktop.css
+++ b/css/desktop.css
@@ -3,6 +3,27 @@
     max-width: 1160px;
   }
 
+  .current-tab::after {
+    display: none;
+  }
+  .current {
+    position: relative;
+    color: var(--accent-color);
+  }
+
+  .current::after {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 4px;
+
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+
   .contact-item:not(:last-child) {
     margin-right: 40px;
   }
