--- a/css/tablet.css
+++ b/css/tablet.css
@@ -64,12 +64,12 @@
     color: var(--accent-color);
   }
 
-  .current {
+  .current-tab {
     position: relative;
     color: var(--accent-color);
   }
 
-  .current::after {
+  .current-tab::after {
     position: absolute;
     bottom: -1px;
     left: 0;
