--- a/css/desktop.css
+++ b/css/desktop.css
@@ -24,6 +24,10 @@
     border-radius: 2px;
   } */
 
+  .header-list .link {
+    padding: 24px 0;
+  }
+
   .contact-item:not(:last-child) {
     margin-right: 40px;
   }
@@ -36,7 +40,7 @@
     padding: 24px 0;
   }
   .hero {
-    padding: 188px;
+    padding: 188px 0;
 
     max-width: 1440px;
     height: 600px;
